# Smart_Farmer_2D

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  Constants.h  FenceLogic.h  Game.h  Resources.h  UI.h
nivele/planse/: plansa_1.txt  plansa_10.txt  plansa_11.txt  plansa_12.txt  plansa_13.txt  plansa_14.txt  plansa_15.txt  plansa_16.txt  plansa_17.txt  plansa_18.txt  plansa_19.txt  plansa_2.txt  plansa_20.txt  plansa_21.txt  plansa_22.txt  plansa_23.txt  plansa_24.txt  plansa_25.txt  plansa_26.txt  plansa_27.txt  plansa_28.txt  plansa_29.txt  plansa_3.txt  plansa_30.txt  plansa_31.txt  plansa_32.txt  plansa_33.txt  plansa_34.txt  plansa_35.txt  plansa_36.txt  plansa_37.txt  plansa_38.txt  plansa_39.txt  plansa_4.txt  plansa_40.txt  plansa_41.txt  plansa_42.txt  plansa_43.txt  plansa_44.txt  plansa_45.txt  (+20 more)
nivele/rezolvari/: rezolvare_1.txt  rezolvare_10.txt  rezolvare_11.txt  rezolvare_12.txt  rezolvare_13.txt  rezolvare_14.txt  rezolvare_15.txt  rezolvare_16.txt  rezolvare_17.txt  rezolvare_18.txt  rezolvare_19.txt  rezolvare_2.txt  rezolvare_20.txt  rezolvare_21.txt  rezolvare_22.txt  rezolvare_23.txt  rezolvare_24.txt  rezolvare_25.txt  rezolvare_26.txt  rezolvare_27.txt  rezolvare_28.txt  rezolvare_29.txt  rezolvare_3.txt  rezolvare_30.txt  rezolvare_31.txt  rezolvare_32.txt  rezolvare_33.txt  rezolvare_34.txt  rezolvare_35.txt  rezolvare_36.txt  rezolvare_37.txt  rezolvare_38.txt  rezolvare_39.txt  rezolvare_4.txt  (+26 more)
src/: Board.cpp  FenceLogic.cpp  Game.cpp  GameFences.cpp  GameMenu.cpp  GamePlaying.cpp  GameResult.cpp  Resources.cpp  UI.cpp  main.cpp
